@@ -4,35 +4,31 @@ import java.util.Arrays;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Queue;
+import java.util.stream.Collectors;
 
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import lombok.AllArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Component;
 
-import com.ramiro.films.dao.Film;
 import com.ramiro.films.domain.FilmDataBase;
 import com.ramiro.films.dto.FilmDto;
+import com.ramiro.films.model.Film;
 import com.ramiro.films.repository.FilmRepository;
 import com.ramiro.films.service.FilmService;
 
+import javax.annotation.PostConstruct;
+
 @Component
+@AllArgsConstructor
+@Slf4j
 public class FilmDataBaseImpl implements FilmDataBase {
 
 	private final FilmService filmService;
 	private final FilmRepository filmRepository;
 	
-	private Queue<String> WORDS_TO_SEARCH_FILMS = new LinkedList<>();
-	
-	Logger logger = LoggerFactory.getLogger(FilmDataBaseImpl.class);
-	
-	public FilmDataBaseImpl(FilmService filmService, FilmRepository filmRepository) {
-		this.filmService = filmService;
-		this.filmRepository = filmRepository;
-		setupWords();
-		uploadInitialFilms();
-	}
-	
-	private void setupWords() {
+	private static Queue<String> WORDS_TO_SEARCH_FILMS = new LinkedList<>();
+
+	static {
 		WORDS_TO_SEARCH_FILMS.addAll(Arrays.asList("paz","war","love","sex","york","amor","guerra"));
 	}
 
@@ -43,19 +39,20 @@ public class FilmDataBaseImpl implements FilmDataBase {
 	public List<Film> getTwoFilms() {
 		return this.filmRepository.findTop2ByOrderByTitleAsc();
 	}
-	
-	private void uploadInitialFilms() {
-		logger.info("Searching Films...");
+
+	@PostConstruct
+	public void uploadInitialFilms() {
+		log.info("Searching Films...");
 		List<FilmDto> searchFilmByTitle = this.filmService.searchFilmByTitle(WORDS_TO_SEARCH_FILMS.poll());
-		logger.info("Films Found: " + searchFilmByTitle.size());
+		log.info("Films Found: " + searchFilmByTitle.size());
 		List<FilmDto> listFilms =
 								searchFilmByTitle.stream()
-									.map(f -> this.filmService.getFilmById(f.imdbID()))
-									.filter(f -> !f.imdbRating().equals("N/A"))
-									.toList();
+									.map(f -> this.filmService.getFilmById(f.getImdbID()))
+									.filter(f -> !f.getImdbRating().equals("N/A"))
+										.collect(Collectors.toList());
 		listFilms.stream().forEach(f -> filmRepository.save(Film.of(f)));
-		logger.info("Films in DataBase: " + filmRepository.count());
-		logger.info("Finished Search Films...");
+		log.info("Films in DataBase: " + filmRepository.count());
+		log.info("Finished Search Films...");
 	}
 	
 }
